first stage build success

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,48 +1,42 @@
 
 <!---footer--->
-
 <div class="footer">
   <div class="row mb-5">
     <div class="col-md">
-      <div class="ftco-footer-widget mb-4">
-        <h2 class="ftco-heading-2">About Us</h2>
+      <div class="mb-4">
+        <h2 class="ftr-heading">About Us</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-          <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
-          <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
-          <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
+      </div>
+    </div>
+    <div class="col-md">
+      <div class="mb-4 ml-md-5">
+        <h2 class="ftr-heading">Information</h2>
+        <ul class="list">
+          <li><a href="#">Rajesh</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
         </ul>
       </div>
     </div>
     <div class="col-md">
-      <div class="ftco-footer-widget mb-4 ml-md-5">
-        <h2 class="ftco-heading-2">Information</h2>
-        <ul class="list-unstyled">
-          <li><a href="#" class="py-2 d-block">Portfolio</a></li>
-          <li><a href="#" class="py-2 d-block">Privacy</a></li>
-          <li><a href="#" class="py-2 d-block">Terms Condition</a></li>
+       <div class="mb-4">
+        <h2 class="ftr-heading">Links</h2>
+        <ul class="list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </div>
     <div class="col-md">
-       <div class="ftco-footer-widget mb-4">
-        <h2 class="ftco-heading-2">Links</h2>
-        <ul class="list-unstyled">
-          <li><a href="#" class="py-2 d-block">Home</a></li>
-          <li><a href="#" class="py-2 d-block">About</a></li>
-          <li><a href="#" class="py-2 d-block">Work</a></li>
-          <li><a href="#" class="py-2 d-block">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="ftco-footer-widget mb-4">
-        <h2 class="ftco-heading-2">Have a Questions?</h2>
-        <div class="block-23 mb-3">
-          <ul>
-            <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-            <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+      <div class="mb-4">
+        <h2 class="ftr-heading">Have a Questions?</h2>
+        <div class="mb-3">
+          <ul class="list">
+            <li><i class="fab fa-map-marker"></i><span class="text">Main Street, Khallikote , 761031, Ganjam, Odisha, India</span></li>
+            <li><a href="#"><i class="fab fa-phone"></i><span class="link">+91 8457077360</span></a></li>
+            <li><a href="#"><i class="fab fa-envelope"></i><span class="link">rajeshkanhar.rk10@gmail.com</span></a></li>
           </ul>
         </div>
       </div>
