--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -56,24 +56,26 @@ a.nav-item.nav-link:hover {
 .main{
   height: 600px;
   display: flex;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   background-color: black;
 }
 .main h1.vr {
-    font-family: "Barlow Condensed", Arial, sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    font-size: 35vw;
-    text-transform: uppercase;
-    z-index: 1;
-    line-height: .1vh;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #fff;
+  font-family: "Barlow Condensed", Arial, sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 36vw;
+  text-transform: uppercase;
+  z-index: 1;
+  color: #fff;
+  color: transparent;
+  line-height: .1vh;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
 }
 .container1{
   height: inherit;
@@ -111,7 +113,7 @@ a.nav-item.nav-link:hover {
   background-size: cover;
   background-position: center;
   -webkit-box-shadow: 1px 5px 19px -3px rgba(189,183,189,1);
-  background-image: url('https://ae01.alicdn.com/kf/HTB1K8E9akL0gK0jSZFxq6xWHVXaw/High-Quality-Men-Suirts-Military-Slim-Fit-Suit-Navy-uniform-Fashion-Brand-Stage-performance-Captain-clothing.jpg');
+  background-image: url('rks.jpg');
 }
 .intro{
   margin:auto;
@@ -126,7 +128,8 @@ a.nav-item.nav-link:hover {
 }
 div.row{
   height:fill-available;
-  margin-top: 35px;
+  margin-top: 70px;
+  margin-bottom: 70px;
 }
 .ed-card{
   height: 400px;
@@ -214,7 +217,7 @@ div.cards{
 }
 .cards:hover .card-img-top{
   transform: scale(1.1);
-  transition: 1.1s;
+  transition: 0.5s;
   cursor: pointer;
 }
 div img.card-img-top{
@@ -245,7 +248,7 @@ div.card-body{
 }
 .memo-button a button:hover{
   transform: scale(1.1);
-  transition: 1s;
+  transition: 0.5s;
 }
 div.ed-card i{
   margin-top: 40px;
