--- a/views/About.ejs
+++ b/views/About.ejs
@@ -14,7 +14,7 @@
                   <div class="profile"></div>
                   <div class="profile-text">
                     <div><h1>Rajesh Kanahr</h1></div>
-                    <p style="color:limegreen;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                    <p style="color:limegreen;">Coading Enthusiast,Quick learner, Web developer</p>
                   </div>
                 </div>
             </div>
