--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,19 +18,12 @@
       </nav>
 
     <main class="main">
-      <h1 class="vr text-center">EVANS</h1>
+      <h1 class="vr text-center">rajesh</h1>
         <!--containers--->
-        <div id="carouselExampleSlidesOnly" class="carousel slide container1" data-ride="carousel">
-          <div class="carousel-inner container1">
+        <div class="container1">
             <div class="carousel-item active main-img">
-              <img class="d-block w-100 main-img1">
+              <!---main-image--->
             </div>
-            <div class="carousel-item main-img">
-              <img class="d-block w-100 main-img2">
-            </div>
-          </div>
-        </div>
-        <div class="container2">
         </div>
       </main>
       <!--- Intro--->
@@ -39,7 +32,7 @@
             <div class="profile"></div>
             <div class="profile-text">
               <div><h1>Rajesh Kanahr</h1></div>
-              <p style="color:limegreen;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+              <p style="color:limegreen;">Coading Enthusiast,Quick learner, Web developer</p>
             </div>
           </div>
       </div>
