--- a/public/stylesheets/about.styles.css
+++ b/public/stylesheets/about.styles.css
@@ -14,7 +14,7 @@ header{
   height: 550px;
   background-position: center;
   background-size: cover;
-  background-image: url('bg_3.jpg');
+  background-image: url('../images/bg_3.jpg');
 }
 .promt-message{
     text-shadow: 0px 5px 6px;
@@ -122,16 +122,16 @@ div.container.about{
   background-size: cover;
 }
 .prof-photo{
-  background-image: url('profile.jpg');
+  background-image: url('../images/profile.jpg');
 }
 .ed-photo{
-  background-image: url('education.jpg');
+  background-image: url('../images/education.jpg');
 }
 .sk-photo{
-  background-image: url('skill.jpg');
+  background-image: url('../images/skill.jpg');
 }
 .pr-photo{
-  background-image: url('project.jpg');
+  background-image: url('../images/project.jpg');
 }
 @media(max-width:1024px){
   .title{
