--- a/views/latestposts.ejs
+++ b/views/latestposts.ejs
@@ -12,7 +12,7 @@
     <div class="container blog-container">
     <%  for(var i =0; i<posts.length; i++){ %>
         <div class="blog">
-          <div class="blog-img" style="background-image:url('<%=posts[i].url%>')">
+          <div><div class="blog-img" style="background-image:url('<%=posts[i].url%>')"></div>
           </div>
           <div class="blog-content">
             <h1> <%= posts[i].title %> </h1>
