--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
       <nav class="navbar navbar-expand-lg nav-container">
         <a class="navbar-brand" href="/">R.k.Sidharth</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span style="color:white;"><i style="color:red;" class="fas fa-chevron-circle-down"></i>MENU</span>
+          <span style="color:white;"><i style="color:#fdcb6e;" class="fas fa-chevron-circle-down"></i>MENU</span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
