--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,22 +64,26 @@
 
       <!---thoughts--->
       <div class="container-fluid th">
-        <div class="container thoughts">
+        <div class="thoughts">
           <div class="th-img1">
 
           </div>
           <div class="message-box">
             <div class="message">
-              <h1>Nothing Else Matters</h1>
-              <p>A small river named Duden flows by their place and supplies.</p>
+              <h1>Reach beyond the Horizon</h1>
+              <h3>Why,</h3>
+              <h3>i would like nothing better then</h3>
+              <h3> Achieve some adventure,</h3>
+              <h3>worthy of our trip. </h3>
             </div>
           </div>
         </div>
-        <div class="container thoughts">
+        <div class="thoughts">
           <div class="message-box">
             <div class="message">
-              <h1>November Rain</h1>
-              <p>A small river named Duden flows by their place and supplies.</p>
+              <h1>Feeel It.</h1>
+              <h3>No matter how corrupt, greedy, and heartless our government, our corporations, our media,
+                and our religious & charitable institutions may become, the music will still be wonderful.</h3>
             </div>
           </div>
           <div class="th-img2">
